Create datapage registry and populate with all known datapages BroadcastDataMessage is now tightly coupled to this registry, don't know if I like this....